<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.gov.sc.cbm.e193comunitario.ui.ConfiguracaoActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_senha"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_senha" />

        <Button
            android:id="@+id/btn_interesses"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_tipo_emergencia" />

        <Button
            android:id="@+id/btn_abrangencia"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_abrangencia" />

        <Button
            android:id="@+id/btn_cidade"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_cidade" />

        <Button
            android:id="@+id/btn_notificacao"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_notificacao" />
    </LinearLayout>

</ScrollView>