<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.gov.sc.cbm.e193comunitario.ui.NotificacaoActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/cb_notificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_notificar" />

        <CheckBox
            android:id="@+id/cb_exibir_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_exibir_msg" />

        <CheckBox
            android:id="@+id/cb_tocar_som"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_tocar_som" />

        <CheckBox
            android:id="@+id/cb_vibrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_vibrar" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_salvar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_salvar" />
    </LinearLayout>

</LinearLayout>
