<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.gov.sc.cbm.e193comunitario.DetalheOcorrenciaActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp" >

            <TextView
                android:id="@+id/tv_tipo_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/tv_tipo_activity_detalhes_ocorrencia" />

            <TextView
                android:id="@+id/tv_tipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_sem_informacao" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp" >

            <TextView
                android:id="@+id/tv_cidade_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/tv_cidade_activity_detalhes_ocorrencia" />

            <TextView
                android:id="@+id/tv_escolher_cidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_sem_informacao" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp" >

            <TextView
                android:id="@+id/tv_bairro_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/tv_bairro_activity_detalhes_ocorrencia" />

            <TextView
                android:id="@+id/tv_bairro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_sem_informacao" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp" >

            <TextView
                android:id="@+id/tv_logradouro_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/tv_logradouro_activity_detalhes_ocorrencia" />

            <TextView
                android:id="@+id/tv_logradouro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_sem_informacao" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp" >

            <TextView
                android:id="@+id/tv_numero_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/tv_numero_activity_detalhes_ocorrencia" />

            <TextView
                android:id="@+id/tv_numero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_sem_informacao" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp" >

            <TextView
                android:id="@+id/tv_complemento_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/tv_complemento_activity_detalhes_ocorrencia" />

            <TextView
                android:id="@+id/tv_complemento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_sem_informacao" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp" >

            <TextView
                android:id="@+id/tv_referencia_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/tv_referencia_activity_detalhes_ocorrencia" />

            <TextView
                android:id="@+id/tv_referencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_sem_informacao" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp" >

            <TextView
                android:id="@+id/tv_descricao_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/tv_descricao_activity_detalhes_ocorrencia" />

            <TextView
                android:id="@+id/tv_descricao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_sem_informacao" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp" >

            <TextView
                android:id="@+id/tv_viatura_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/tv_viatura_activity_detalhes_ocorrencia" />

            <TextView
                android:id="@+id/tv_viatura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_sem_informacao" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp" >

            <TextView
                android:id="@+id/tv_tempo_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/tv_data_activity_detalhes_ocorrencia" />

            <TextView
                android:id="@+id/tv_tempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_sem_informacao" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp" >

            <TextView
                android:id="@+id/tv_distancia_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/tv_distancia_activity_detalhes_ocorrencia" />

            <TextView
                android:id="@+id/tv_distancia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_sem_informacao" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_mostrar_mapa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_mostrar_no_mapa_activity_detalhes_ocorrencia" />

        <Button
            android:id="@+id/btn_ir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_a_caminho_activity_detalhes_ocorrencia" />

        <Button
            android:id="@+id/btn_compartilhar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_compartilhar" />
    </LinearLayout>

</ScrollView>