<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.gov.sc.cbm.e193comunitario.ui.DefinirSenhaActivity" >

    <Switch
        android:id="@+id/sw_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sw_senha" />

    <LinearLayout
        android:id="@+id/ll_senha_itens"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_senha" />

        <EditText
            android:id="@+id/edt_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_limpa_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_limpar_senha" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_salvar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_salvar" />

    </LinearLayout>

</LinearLayout>
