<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.gov.sc.cbm.e193comunitario.ui.MonitoramentoActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_status_monitoramento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_status_monitoramento"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ToggleButton
                android:id="@+id/tbtn_monitorar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/tv_ocorrencias_em_andamento"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_ver_abertas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_todas" />

            <Button
                android:id="@+id/btn_ver_interesse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_selecionadas" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="Clique na radio que você deseja ouvir" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:layout_weight="1" >

            <Spinner
                android:id="@+id/spn_radios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/img_btn_play_radio_on_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_play" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_localizacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_localizacao" />

        <TextView
            android:id="@+id/tv_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reticencias" />
    </LinearLayout>

</ScrollView>